--- a/theme.conf
+++ b/theme.conf
@@ -1,17 +1,17 @@
 [General]
 background=assets/background.jpg
 
-ScreenWidth=1440
-ScreenHeight=900
+ScreenWidth=1920
+ScreenHeight=1080
 
-blur=true
+blur=false
 recursiveBlurLoops=4
 recursiveBlurRadius=15
 
 PasswordFieldOutlined=false
 
 PowerIconSize=
-FontPointSize=
+FontPointSize=20
 AvatarPixelSize=
 
 translationReboot=
